--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,24 +14,7 @@
         android:theme="@style/Theme.Attendance"
         tools:targetApi="31">
         <activity
-            android:name=".activity.auth.SignupActivity"
-            android:exported="false"
-            android:label="إنشاء حساب"
-            android:windowSoftInputMode="adjustResize">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".activity.auth.LoginActivity"
-            android:exported="false"
-            android:label="تسجيل الدخول">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".activity.auth.SplashActivity"
+            android:name=".activity.SplashActivity"
             android:exported="true"
             android:label="تعلم الأطفال">
             <intent-filter>
@@ -44,12 +27,17 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".activity.main.HomeActivity"
+            android:name=".activity.StartActivity"
+            android:exported="true"
+            android:label="ابدأ"
+            android:windowSoftInputMode="adjustResize"/>
+        <activity
+            android:name=".activity.HomeActivity"
             android:exported="true"
             android:label="الاختبار"
             android:windowSoftInputMode="adjustResize"/>
         <activity
-            android:name=".activity.main.ExamResultActivity"
+            android:name=".activity.ExamResultActivity"
             android:exported="true"
             android:label="نتيجة الاختبار"
             android:windowSoftInputMode="adjustResize" />
